k8s/apps/homepage/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - secretName: tls-ftsell.de
      hosts:
        - ftsell.de
        - www.ftsell.de
        - finn-thorben.me
        - www.finn-thorben.me
  rules:
    - host: ftsell.de
      http: &http
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  name: http
          - path: /pixelflut.sock
            pathType: Exact
            backend:
              service:
                name: pixeldike-intern
                port:
                  name: pixelflut-ws
          - path: /stream/
            pathType: Prefix
            backend:
              service:
                name: mediamtx
                port:
                  name: http
          - path: /verysecretriddles
            pathType: Prefix
            backend:
              service:
                name: website-riddles
                port:
                  name: http
    - host: www.ftsell.de
      http: *http
    - host: finn-thorben.me
      http: *http
    - host: www.finn-thorben.me
      http: *http
